
FEATURE  [CORE] For Software Lists, instead of showing the number of ROMs show the number
         of Items in Flat display mode or Parents in Parent/Clone display mode.

FEATURE  [CORE] Support for MASH's Alltime.ini.

FEATURE  [CORE] Improvements in the JSON index of DAT files. Use dictionaries and not list
         to reduce JSON file size and speed up data access.

FIX      Fixed conversion to int of addon version str in fs_AML_version_str_to_int()

FIX      New history.dat makes AML to crash because one entry could be for more than one
         machine. In addition, the same description can be used over several SLs.


[B]Advanced MAME Launcher | version 0.9.10 | 10 May 2019[/B]

FEATURE  Option to disable Software Lists at all in Vanilla MAME mode.

FEATURE  Management of MAME Favourite objects (delete missing, delete single).

FEATURE  Management of SL Favourite objects (delete missing, delete single).

FEATURE  Initial support for Retroarch MAME 2003 Plus core.

FEATURE  [CORE] Ability to export DAT files in Logiqx format for MAME ROMs and MAME CHDs.

FEATURE  [CORE] Differentiate between Non-merged and Fully non-merged MAME ROM sets.
         Non-merged sets do not include BIOS and device ROMs.
         Fully non-merged sets include BIOS and devices ROMs (every ROM required to run each
         machine). Pleasuredome ROM sets are Fully non-merged.
         This needs more testing.

FEATURE  [FILTERING] Test the filters for errors. For example, test that all the drivers
         defined in <Driver> exist. Another example, test that the genres defined in
         <Genre> and the controls defined in <Controls> exist.

FEATURE  [FILTERING] Warn the user if errors found in the XML filter definition, maybe in
         a report the user can read later.

FEATURE  [FILTERING] Make a filter report the user can read. Now, only the number of machines
         after filtering is reported.

FEATURE  [GRAPHICS] Generate MAME machines and SL items 3D Boxes.
