@@ -410,28 +410,29 @@ def fs_new_control_dic():
         'stats_samples_parents'    : 0,
         'stats_samples_clones'     : 0,
 
-        # --- Filed in when building the MAME catalogs in  mame_build_MAME_catalogs() ---
-        'stats_MF_Normal_Total'          : 0,
-        'stats_MF_Normal_Good'           : 0,
-        'stats_MF_Normal_Imperfect'      : 0,
-        'stats_MF_Normal_Nonworking'     : 0,
-        'stats_MF_Unusual_Total'         : 0,
-        'stats_MF_Unusual_Good'          : 0,
-        'stats_MF_Unusual_Imperfect'     : 0,
-        'stats_MF_Unusual_Nonworking'    : 0,
-        'stats_MF_Nocoin_Total'          : 0,
-        'stats_MF_Nocoin_Good'           : 0,
-        'stats_MF_Nocoin_Imperfect'      : 0,
-        'stats_MF_Nocoin_Nonworking'     : 0,
-        'stats_MF_Mechanical_Total'      : 0,
-        'stats_MF_Mechanical_Good'       : 0,
-        'stats_MF_Mechanical_Imperfect'  : 0,
-        'stats_MF_Mechanical_Nonworking' : 0,
-        'stats_MF_Dead_Total'            : 0,
-        'stats_MF_Dead_Good'             : 0,
-        'stats_MF_Dead_Imperfect'        : 0,
-        'stats_MF_Dead_Nonworking'       : 0,
-        # Devices driver_status is always the empty string ''
+        # --- Main filter statistics ---
+        # Filed in when building the MAME catalogs in mame_build_MAME_catalogs()
+        # driver_status for device machines is always the empty string ''
+        'stats_MF_Normal_Total'          : 0, 'stats_MF_Normal_Total_parents'          : 0,
+        'stats_MF_Normal_Good'           : 0, 'stats_MF_Normal_Good_parents'           : 0,
+        'stats_MF_Normal_Imperfect'      : 0, 'stats_MF_Normal_Imperfect_parents'      : 0,
+        'stats_MF_Normal_Nonworking'     : 0, 'stats_MF_Normal_Nonworking_parents'     : 0,
+        'stats_MF_Unusual_Total'         : 0, 'stats_MF_Unusual_Total_parents'         : 0,
+        'stats_MF_Unusual_Good'          : 0, 'stats_MF_Unusual_Good_parents'          : 0,
+        'stats_MF_Unusual_Imperfect'     : 0, 'stats_MF_Unusual_Imperfect_parents'     : 0,
+        'stats_MF_Unusual_Nonworking'    : 0, 'stats_MF_Unusual_Nonworking_parents'    : 0,
+        'stats_MF_Nocoin_Total'          : 0, 'stats_MF_Nocoin_Total_parents'          : 0,
+        'stats_MF_Nocoin_Good'           : 0, 'stats_MF_Nocoin_Good_parents'           : 0,
+        'stats_MF_Nocoin_Imperfect'      : 0, 'stats_MF_Nocoin_Imperfect_parents'      : 0,
+        'stats_MF_Nocoin_Nonworking'     : 0, 'stats_MF_Nocoin_Nonworking_parents'     : 0,
+        'stats_MF_Mechanical_Total'      : 0, 'stats_MF_Mechanical_Total_parents'      : 0,
+        'stats_MF_Mechanical_Good'       : 0, 'stats_MF_Mechanical_Good_parents'       : 0,
+        'stats_MF_Mechanical_Imperfect'  : 0, 'stats_MF_Mechanical_Imperfect_parents'  : 0,
+        'stats_MF_Mechanical_Nonworking' : 0, 'stats_MF_Mechanical_Nonworking_parents' : 0,
+        'stats_MF_Dead_Total'            : 0, 'stats_MF_Dead_Total_parents'            : 0,
+        'stats_MF_Dead_Good'             : 0, 'stats_MF_Dead_Good_parents'             : 0,
+        'stats_MF_Dead_Imperfect'        : 0, 'stats_MF_Dead_Imperfect_parents'        : 0,
+        'stats_MF_Dead_Nonworking'       : 0, 'stats_MF_Dead_Nonworking_parents'       : 0,
 
         # --- Filed in when building the ROM audit databases ---
         'stats_audit_MAME_machines_runnable' : 0,
